src/test/deca/syntax/valid/SansObjet/ReadFloatTest.deca
//Description
//  test de readfloat
//
//Résultat
//  ok

{
    float x = readFloat();
}