src/test/deca/syntax/invalid/provided/DeclarationVariableAtteinte.deca
//Description:
//  Déclaration d'une variable dans un if atteint
//
//Résultat:
//  ok
{
if(true)
{
    int x;
}
x=3;
}
